--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "expo": "~47.0.5",
+    "expo-linking": "~3.2.3",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-webview": "^11.23.1",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
